--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
 
   "content_scripts": [
     {
-      "matches": [<all_urls>],
+      "matches": ["http://*/*", "https://*/*"],
       "js": ["src/build/main.js"]
     }
   ]
