--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,8 @@
     "default_popup": "src/popup.html"
   },
 
+  "content_security_policy": "script-src 'self' https://code.jquery.com; object-src 'self'",
+
   "permissions": [
     "activeTab",
     "tabs"
