--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "ingredients-parser": "^1.4.0",
+    "jquery": "^3.3.1",
     "parcel-bundler": "^1.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
